# django-explicit-behave

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: _tests.yml  tests.yml
explicit_bdd/: __init__.py  _steps.py  db.py  http.py  mocks.py  utils.py
explicit_behave/: __init__.py  _steps.py  db.py  http.py  mocks.py  utils.py
tests/: settings.py  urls.py
tests/poll_app/: __init__.py  serializers.py  urls.py  views.py
