[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django_explicit_bdd"
version = "0.0.1"
description = "A collection of explicit behave steps for API testing"
readme = "README.md"
keywords = ["django", "testing", "pytest", "bdd", "pytest-bdd"]
authors = [
    {name = "Maurizio Pilia", email = "piliamaurizio@gmail.com"},
    {name = "Javier Buzzi", email = "buzzi.javier@gmail.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    'factory-boy>=2.12.0',
    "django>=4.2",
    'jq>=0.1.6',
    'model-bakery>=1.3.2',
    "pytest-cov",
    "pytest-bdd",
    'tabulate>=0.8.3',
]
requires-python = ">=3.8"

[project.optional-dependencies]
lint = [
    "black",
    "isort",
    "ruff"
]
test = [
    "build",
    "ipdb",
]

[project.urls]
homepage = "https://github.com/gestores-1880/django-explicit-bdd"

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*"]

[tool.setuptools]
zip-safe = true
platforms = ["any"]

[tool.black]
line-length = 119
exclude = "venv/"

[tool.isort]
combine_as_imports = true
line_length = 119
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["venv/**"]

[tool.coverage.run]
source = ["explicit_bdd"]

[tool.coverage.report]
omit = ["*/migrations_*/*"]
show_missing = true
fail_under = 95

[tool.pypi]
repository = "https://upload.pypi.org/legacy/"
username = "kingbuzzman"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings"
pythonpath = "tests"
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb"
python_files = ["test_*.py"]

# Custom markers for pytest
markers = [
    "temporary_migration_module",
    "temporary_migration_module2",
    "temporary_migration_module3",
    "slow: marks tests as slow"
]

filterwarnings = [
    "error",

    # # Internal warning to tell the user that the writer.py file has changed, and may not be compatible.
    # "ignore:Django migrations writer file has changed and may not be compatible with django-squash",

    # # Warning: django.utils.deprecation.RemovedInDjango50Warning: The USE_L10N setting is deprecated. Starting with Django 5.0, localized formatting of data will always be enabled. For example Django will display numbers and dates using the format of the current locale.
    # # Don't specify the exact warning (django.utils.deprecation.RemovedInDjango50Warning) as not all version of Django know it and pytest will fail
    # "ignore:The USE_L10N setting is deprecated:",

    # # Warning: cgi is only being used by Django 3.2
    # "ignore:'cgi' is deprecated and slated for removal in Python 3.13",

    # # Django 3.2 throws a warning about the USE_I18N setting being deprecated
    # "ignore:datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects .*"
]
